[gd_scene load_steps=64 format=2]

[ext_resource path="res://assets/Enemies/Goblin/Idle.png" type="Texture" id=1]
[ext_resource path="res://assets/Enemies/Goblin/Run.png" type="Texture" id=2]
[ext_resource path="res://assets/Enemies/Goblin/Attack.png" type="Texture" id=3]
[ext_resource path="res://assets/Enemies/Goblin/Attack2.png" type="Texture" id=4]
[ext_resource path="res://assets/Enemies/Goblin/Attack3.png" type="Texture" id=5]
[ext_resource path="res://src/Actors/Enemy/Boss.gd" type="Script" id=6]
[ext_resource path="res://assets/Enemies/Goblin/Take Hit.png" type="Texture" id=7]
[ext_resource path="res://assets/Enemies/Goblin/Death.png" type="Texture" id=8]
[ext_resource path="res://src/UI/HealthBarEnemy.tscn" type="PackedScene" id=9]

[sub_resource type="RectangleShape2D" id=42]
extents = Vector2( 34, 71 )

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 150, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 300, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 450, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 8 )
region = Rect2( 150, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 8 )
region = Rect2( 300, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 8 )
region = Rect2( 450, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 4 )
region = Rect2( 150, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 4 )
region = Rect2( 300, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 4 )
region = Rect2( 450, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 4 )
region = Rect2( 600, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 4 )
region = Rect2( 750, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 4 )
region = Rect2( 900, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 4 )
region = Rect2( 1050, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 5 )
region = Rect2( 150, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 5 )
region = Rect2( 300, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 5 )
region = Rect2( 450, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 5 )
region = Rect2( 600, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 5 )
region = Rect2( 750, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 5 )
region = Rect2( 900, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 5 )
region = Rect2( 1050, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 5 )
region = Rect2( 1200, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 5 )
region = Rect2( 1350, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 5 )
region = Rect2( 1500, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 5 )
region = Rect2( 1650, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 7 )
region = Rect2( 150, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 7 )
region = Rect2( 300, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 7 )
region = Rect2( 450, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 3 )
region = Rect2( 150, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 3 )
region = Rect2( 300, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 3 )
region = Rect2( 450, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 3 )
region = Rect2( 600, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 3 )
region = Rect2( 750, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 3 )
region = Rect2( 900, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 3 )
region = Rect2( 1050, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 150, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 300, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 450, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 600, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 2 )
region = Rect2( 750, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 2 )
region = Rect2( 900, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 2 )
region = Rect2( 1050, 0, 150, 150 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ) ],
"loop": true,
"name": "death",
"speed": 5.0
}, {
"frames": [ SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ) ],
"loop": true,
"name": "attack2",
"speed": 5.0
}, {
"frames": [ SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ) ],
"loop": true,
"name": "attack1",
"speed": 5.0
}, {
"frames": [ SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ) ],
"loop": true,
"name": "hit",
"speed": 5.0
}, {
"frames": [ SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ) ],
"loop": true,
"name": "attack3",
"speed": 5.0
}, {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ) ],
"loop": true,
"name": "run",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=43]
extents = Vector2( 46, 62.5 )

[sub_resource type="CapsuleShape2D" id=44]
radius = 63.0
height = 0.0

[sub_resource type="RectangleShape2D" id=45]
extents = Vector2( 48, 67.75 )

[sub_resource type="RectangleShape2D" id=54]
extents = Vector2( 75.25, 15.5 )

[node name="Boss" type="KinematicBody2D" groups=["Enemy"]]
collision_layer = 4
collision_mask = 2
script = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -6, 32 )
shape = SubResource( 42 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 4, 4 )
frames = SubResource( 5 )
animation = "idle"
speed_scale = 2.0
flip_h = true

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( -118, -12 )

[node name="TimerBomb" type="Timer" parent="."]

[node name="StompArea" type="Area2D" parent="."]

[node name="StompCollision" type="CollisionShape2D" parent="StompArea"]
position = Vector2( -2, 37.5 )
shape = SubResource( 43 )

[node name="SwordAttack2Area" type="Area2D" parent="."]

[node name="SwordAttack2Collision" type="CollisionShape2D" parent="SwordAttack2Area"]
position = Vector2( -203, 44 )
shape = SubResource( 44 )
disabled = true

[node name="NearPlayerArea" type="Area2D" parent="."]

[node name="NearPlayerCollision" type="CollisionShape2D" parent="NearPlayerArea"]
position = Vector2( -126, 34.75 )
shape = SubResource( 45 )

[node name="TimerAttack3" type="Timer" parent="."]

[node name="TimerAttack2" type="Timer" parent="."]

[node name="TimerHit" type="Timer" parent="."]

[node name="HealthBarEnemy" parent="." instance=ExtResource( 9 )]
margin_left = -133.0
margin_top = -65.0
margin_right = -133.0
margin_bottom = -65.0

[node name="SwordAttack3Area" type="Area2D" parent="."]

[node name="SwordAttack3Collision" type="CollisionShape2D" parent="SwordAttack3Area"]
position = Vector2( -93.25, 63.5 )
shape = SubResource( 54 )
disabled = true

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
process_parent = true
physics_process_parent = true

[connection signal="hp_change" from="." to="HealthBarEnemy" method="_on_Boss_hp_change"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="frame_changed" from="AnimatedSprite" to="." method="_on_AnimatedSprite_frame_changed"]
[connection signal="timeout" from="TimerBomb" to="." method="_on_TimerBomb_timeout"]
[connection signal="area_entered" from="StompArea" to="." method="_on_StompArea_area_entered"]
[connection signal="body_entered" from="SwordAttack2Area" to="." method="_on_SwordAttack2Area_body_entered"]
[connection signal="body_entered" from="NearPlayerArea" to="." method="_on_NearPlayerArea_body_entered"]
[connection signal="timeout" from="TimerAttack3" to="." method="_on_TimerAttack3_timeout"]
[connection signal="timeout" from="TimerAttack2" to="." method="_on_TimerAttack2_timeout"]
[connection signal="timeout" from="TimerHit" to="." method="_on_TimerHit_timeout"]
[connection signal="body_entered" from="SwordAttack3Area" to="." method="_on_SwordAttack3Area_body_entered"]
[connection signal="screen_entered" from="VisibilityEnabler2D" to="." method="_on_VisibilityEnabler2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityEnabler2D" to="." method="_on_VisibilityEnabler2D_screen_exited"]
